After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 682438 - ot-main: Ignore lt- prefixes in binary names
ot-main: Ignore lt- prefixes in binary names
Status: RESOLVED FIXED
Product: ostree
Classification: Infrastructure
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: OSTree maintainer(s)
OSTree maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-08-22 09:00 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2012-10-24 16:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ot-main: Ignore lt- prefixes in binary names (745 bytes, patch)
2012-08-22 09:00 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2012-08-22 09:00:40 UTC
See patch. Trying to get this to work, fucking libtool.
Comment 1 Jasper St. Pierre (not reading bugmail) 2012-08-22 09:00:42 UTC
Created attachment 222113 [details] [review]
ot-main: Ignore lt- prefixes in binary names

libtool is the best
Comment 2 Colin Walters 2012-08-22 14:54:17 UTC
Review of attachment 222113 [details] [review]:

I think I had this somewhere before...no objections though if it helps you.  I don't run ostree uninstalled personally.
Comment 3 Jasper St. Pierre (not reading bugmail) 2012-10-24 16:20:49 UTC
Attachment 222113 [details] pushed as cda5b28 - ot-main: Ignore lt- prefixes in binary names