ot-main: Ignore lt- prefixes in binary names

libtool is the best

https://bugzilla.gnome.org/show_bug.cgi?id=682438